comple dataframe module

--- a/data_frame_and _data_structure/data_frame.ipynb
+++ b/data_frame_and _data_structure/data_frame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "255f8aba-f651-4032-9f1c-bc71ceca75a8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "42792292-c458-4ac7-808f-40aa9ecad343",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "9  1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "ab6e6ff6-fb8f-490a-8a18-662aea8b8673",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "2    21    41    18   511   211    15   890   534   344    431"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "b86bd910-03c3-42de-98a3-10a43b286cfe",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "index3    21    41    18   511   211    15   890   534   344    431"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,18 +342,180 @@
    "id": "7b46cc70-9b4f-4e71-9298-1bd1e1edd9fb",
    "metadata": {},
    "source": [
-    "## Creating  dataframe with only dictonary"
+    "## Creating  dataframe with  dictonary and list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bd94c151-0471-41db-b754-4c016eb7a2c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictonary = {\"name_id\" : [1,2,4,5,30,21,5,31,24,14,13], \"courses\" : [\"python\",\"webdevelop\",\"CCNA\" , \"python\",\"webdevelop\",\"CCNA\" , \"ethical hacking\",\"python\",\"webdevelop\",\"CCNA\" , \"ethical hacking\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d79a2852-47ce-46df-aa99-1053e25ebd55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_id</th>\n",
+       "      <th>courses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>webdevelop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CCNA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30</td>\n",
+       "      <td>webdevelop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>21</td>\n",
+       "      <td>CCNA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>ethical hacking</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>31</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>24</td>\n",
+       "      <td>webdevelop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14</td>\n",
+       "      <td>CCNA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>ethical hacking</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name_id          courses\n",
+       "0         1           python\n",
+       "1         2       webdevelop\n",
+       "2         4             CCNA\n",
+       "3         5           python\n",
+       "4        30       webdevelop\n",
+       "5        21             CCNA\n",
+       "6         5  ethical hacking\n",
+       "7        31           python\n",
+       "8        24       webdevelop\n",
+       "9        14             CCNA\n",
+       "10       13  ethical hacking"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame(dictonary)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff47fe29-8b1e-4e7a-9409-629033f689dc",
+   "metadata": {},
+   "source": [
+    "# creatind dataframe with dictonary and  serires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "89d9ac1a-21ae-41ee-9c2c-aedfbd836067",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'series'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m se \u001b[38;5;241m=\u001b[39m{ \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ms1\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseries\u001b[49m([\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m0\u001b[39m]) , \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ms2\u001b[39m\u001b[38;5;124m\"\u001b[39m : pd\u001b[38;5;241m.\u001b[39mseries([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m])}\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'series'"
+     ]
+    }
+   ],
+   "source": [
+    "se ={ \"s1\" : pd.series([2,3,4,5,6,7,8,9,0]) , \"s2\" : pd.series([1,2,3,4,5,6,7,8,9])}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f95186c-34d8-4abc-bbad-2d6d9705f5a8",
+   "id": "27894cb9-bf29-455a-aae6-f5444f42eaac",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#here i am going to creat dataframe with help of dictonary\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167dd901-02f9-4dd3-b140-f972cd60b98d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
